# agents

./: .gitignore  dot_env.example
article/: content_lesson_1.md  content_lesson_2.md  content_lesson_3 bis.md  content_lesson_3.md  content_lesson_4.md  content_lesson_5.md  content_lesson_6.md  content_lesson_7.md  content_lesson_8.md  content_lesson_9.md
berkeley-course-2024/: README.md
berkeley-course-2024/hackathon/: .gitignore  2405.14831v1_document_structure.pkl  2405.14831v1_document_structure_with_ne.pkl  2405.14831v1_entity2uid_dict.pkl  2405.14831v1_entity_embeddings.pkl  2405.14831v1_entity_per_chunk_count_matrix.pkl  README.md  pyproject.toml
berkeley-course-2024/hackathon/Personas/: EntityMaster.json  EntityMaster.yaml  EntityMasterCrewAI.yaml  Francisco.json  TopicCrewAI.yaml
berkeley-course-2024/hackathon/nf/src/: ResearchMasterCrewAI.yaml  graph_agent_crewai.py  graphiti_demo_agent_crewai.py  utils.py
berkeley-course-2024/hackathon/notebooks/: 2405.14831v1_document_structure.pkl  2405.14831v1_entity2uid_dict.pkl  2405.14831v1_entity_embeddings.pkl  PersonasCrewAI.yaml  UserDBCrewAI.yaml  article_search_crew.ipynb  download_crew.ipynb  graph_creation.ipynb  hipporag_overall_process_reference.ipynb  playground.ipynb  search_and_download.ipynb  user_identification_test.ipynb
berkeley-course-2024/hackathon/src/hackathon/: basic_oai_swarm.py  code_execution_agent_crewai.py  graph_creation_crewai.py  graph_creation_oai_swarm.py  graph_creation_step_1_crewai.py  graph_creation_step_2_matrix_ref_count_crewai.py  graph_creation_step_2_triples.py  graph_creation_step_2_triples_crewai.py  graph_creation_step_3.py  graph_graphiti.py  graph_neo4j.py  index.py  input_output_types.py  main.py  retrieval_agent.py  retrieval_neo4j.py  tools.py  topic.py  triples.py  users.py  utils.py
berkeley-course-2024/hackathon/src/hackathon/ui/: chat_page.py  graph_page.py  main_app.py
berkeley-course-2024/hackathon/src/hackathon/ui/www/: neo4j_graph.html
berkeley-course-2024/lab1/: .python-version  README.md  main.py  main_orig.py  main_single_groupchat.py  test.py
berkeley-course-2024/lab2/: README.md  attack-1.txt  attack-2.txt
berkeley-course-2024/lab3/: defense.txt
lab1/: README.md  main.py
lab1/.cache/41/: cache.db  cache.db-shm
lab2/: README.md
