[project]
authors = [{name = "Francisco Perez-Sorrosal", email = "fperezsorrosal@gmail.com"}]
description = "Add a short description here"
name = "hackathon"
requires-python = ">= 3.11,<3.13"
version = "0.1.0"
dependencies = ["swarm @ git+ssh://git@github.com/openai/swarm.git", "langchain>=0.2.16,<0.4", "rich>=13.9.3,<14", "llm-foundation>=0.0.21,<0.0.22"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
hackathon = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pypdf = ">=5.0.1,<6"

[tool.hatch.metadata]
allow-direct-references = true
