[project]
authors = [{name = "Francisco Perez-Sorrosal", email = "fperezsorrosal@gmail.com"}]
description = "Add a short description here"
name = "hackathon"
requires-python = ">= 3.11,<3.13"
version = "0.1.0"
dependencies = ["swarm @ git+ssh://git@github.com/openai/swarm.git", "langchain>=0.2.16,<0.4", "rich>=13.9.3,<14", "langchain-community>=0.3.3,<0.4", "neo4j>=5.25.0,<6", "docker>=7.1.0,<8", "igraph>=0.11.8,<0.12", "graphiti-core>=0.3.21,<0.4", "shiny>=1.2.0,<2", "plotnine>=0.14.1,<0.15", "palmerpenguins>=0.1.4,<0.2", "agentops>=0.1.1,<1.0", "langtrace-python-sdk>=3.3.2,<4", "pyvis>=0.3.2,<0.4", "humanlayer>=0.6.0,<0.7", "llm-foundation==0.0.24", "crewai==0.79.4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
hackathon = { path = ".", editable = true }

[tool.pixi.tasks]
ui="pixi run shiny run src/hackathon/ui/main_app.py"

[tool.pixi.dependencies]
pypdf = ">=5.0.1,<6"
faiss = ">=1.8.0,<2"
packaging = "==23.2"

[tool.hatch.metadata]
allow-direct-references = true
